--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,233 +1,97 @@
+
 body{
-	margin:auto;
-	position: relative;
-}
-
-header{
-	position: relative;
-	background-color: #ffffff;
-	border-color: #cccccc;
-	/*border:solid;*/
-	margin:auto;
-	overflow: auto;
-	width:960px;
-
-}
-
-a{
-	color: #4aaaa5;
-	text-decoration: none;
-	font-size: 18px;
+	overflow-x: hidden;
 }
 
 
 
-
-.name{
-	/*position: absolute;*/
-	background-color: #4aaaa5;
-	color: #ffffff;
-	/*border:solid;*/
-	/*border-color: #cccccc;*/
-	font-family: Georgia, Times, serif;
-	text-align: center;
-	left:0;
-	float:left;
-	width: 260px;
-}
-.links{
-	border-color: black;
-	/*border:solid;*/
-	bottom: 0px;
-	float:right;
-	margin-right: 5px;
-	position: absolute;
-	right:0px;
-	text-align: center;
-	width:270px;
+#nav-container{
+	width: 100%;
+	border: dotted black 1px;
 }
 
-.nav{
-	display: inline-block;
-	color:#cccccc;
+#nav-bar{
+	width: 100%;
+	border: dotted black 1px;
 }
 
-
-.container{
-	position: relative;
-	background-color: #4aaaa5;
-	clear:both;
-	margin-top:10px;
-	padding:60px 100px 80px 100px;
-	overflow: auto;
-	width:960px;
-	z-index: 0;
-}
-
-#background{
-	background-image: url(../images/cork-wallet.jpg);
-	margin:auto;
-	width: 960px;
-	z-index: 1;
-}
-
-
-
-.content{
-	background-color: #ffffff;
-	/*border:solid;*/
-	/*border-color: black;*/
-	font-color: #4aaaa5;
-	margin-left: -20px;
-	margin-right: 10px;
-	float:left;
-	padding: 10px;
-	padding-left: 30px;
-	overflow: auto;
-	width: 650px;
-	font-family: Arial, Helvetica, sans-serif;
-	color:#666666;
-}
-
-
-
-.titlehead{
-	width:650px;
-	border-bottom: solid;
-	border-bottom-color: #cccccc;
-	margin-bottom: 15px;
-	overflow: auto;
-}
-
-.title{
-	font-family: Georgia, Times, serif;
-	color:#4aaaa5;
-}
-
-
-.about{
-	font-family: Arial, Helvetica, sans-serif;
-	color:#666666;
-	line-height: 30px;
-	word-spacing: 5px;
-}
-
-#profile{
-	float: left;
-	margin: 15px;
-	height: 300px;
-	width: 400px;
-}
-
-
-.sidebar{
-	background-color: #ffffff;
-	/*border:solid;*/
-	/*border-color: red;*/
-	font-color:#4aaaa5;
+#nav-list{
 	float: right;
-	padding-bottom: 30px;
-	text-align: center;
-	width:270px;
+	list-style-type: none;
+	padding-top: 10px;
 }
 
-#contacthead{
-	width:200px;
-	border-bottom: solid;
-	border-bottom-color: #cccccc;
+#nav-list li{
+	display: inline;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+#about-container{
 	overflow: auto;
-	margin:auto;
-	margin-bottom: 15px;
+	border: dotted black 1px;
 }
 
-#connect{
-	font-family: Georgia, Times, serif;
-	color:#4aaaa5;
-}
-
-#connecthead{
-	width:590px;
-	border-bottom: solid;
-	border-bottom-color: #cccccc;
-	overflow: auto;
-	margin-bottom: 15px;
-	margin-top: 20px;
-		font-family: Georgia, Times, serif;
-	color:#4aaaa5;
-
-}
-
-
-.form{
-	width: 590px;
-	height: 35px;
-}
-
-#Message{
-	width: 590px;
-	height: 200px;
-}
-
-#button{
-	background-color: #4aaaa5;
-	color: #ffffff;
-	font-family: Georgia, Times, serif;
-	/*height: 50px*/
-	width: 120px;
-
-	border-style: none;
-
-	
-}
-
-
-.portdiv{
-	margin-left: 40px;
-	margin-bottom: 40px;
-	float: left;
-}
-
-.banner{
-	width: 250px;
-	height: 50px;
-	background-color: #4aaaa5;
-	margin-top: -90px;
-	z-index: 1;
-	position: relative;
+#bio-wrapper{
+	width: 45%;
+	height: 35%;
+	position: absolute;
+	right: 10%;
+	padding: 10px;
 	text-align: center;
-	color: #ffffff;
-	font-family: Georgia, Times, serif;
-	padding-top: 5px;
-	padding-bottom: 5px;
-
 }
 
-#separator{
-	width: 75px;
-	border-left: solid #cccccc 1px;
-	border-right: solid #cccccc 1px;
-	
+h2{
+	display: inline-block;
+	padding-left: 10px;
 }
-
-
-
-
 
 
 img{
-	margin:auto;
+	display: inline-block;
+	height: 400px;
+	width: 500px;
+	float: left;
 }
 
 
-footer{
-	position: absolute;
-	background-color: #666666;
-	border-top: 5px solid #4aaaa5;
-	bottom:0px;
-	clear: both;
-	left: 0px;
+p{
+	float: right;
+	display: inline;
+	overflow-wrap: break-word;
+}
+
+
+#projects-container{
+	width: 100%;
+	display: block;
+	border: 1px dotted black;
 	margin: auto;
-	width:1160px;
-	color: #ffffff;
+}
+
+
+.project-list{
+	list-style-type: none;
+	width: 100%;
+}
+
+.project-list li{
+	display: inline-block;
+	width: 31%;
+	text-align: center;
+}
+
+
+.project-panel{
+	height: 200px;
+	width: 200px;
+	border: dotted black 1px;
+	margin: auto;
+}
+
+#footer-container{
+	width: 97%;
+	border: dotted black 1px;
+	padding: 20px;
 	text-align: center;
 }
