--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 
 body{
 	overflow-x: hidden;
+	border: 1px dotted black;
 }
 
 
@@ -39,13 +40,14 @@ body{
 	width: 500px;
 	display: inline-block;
 	float: left;
+	margin-left: 40px;
 }
 
 #bio-wrapper{
-	width: 45%;
-	height: 60%;
+	width: 600px;
+	height: 375px;
 	position: absolute;
-	right: 10%;
+	right: 5%;
 	padding: 10px;
 	text-align: center;
 	border: 1px black dotted;
