--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,56 +2,82 @@
 body{
 	overflow-x: hidden;
 	border: 1px dotted black;
+	background-image: url("../images/background5.jpg");
+	background-repeat: no-repeat;
+	background-attachment: fixed;
 }
-
 
 
 #nav-container{
 	width: 100%;
 	border: dotted black 1px;
+	left: 0px;
 }
 
 #nav-bar{
 	width: 100%;
 	border: dotted black 1px;
+	padding: 40px;
+	left: 0px;
 }
 
 #nav-list{
 	float: right;
 	list-style-type: none;
 	padding-top: 10px;
+	margin-right: 80px;
 }
 
 #nav-list li{
 	display: inline;
 	padding-left: 20px;
 	padding-right: 20px;
+	border: 1px dotted black;
+	padding-top:20px;
+	padding-bottom: 20px;
+	border-radius: 20%;
+	margin-right: 10px;
 }
 
 #about-container{
-	overflow: auto;
+	height: 575px;
 	border: dotted black 1px;
 	padding: 10px;
 }
 
 #pic-container{
 	border: 1px dotted black;
-	height: 400px;
-	width: 500px;
+	height: 560px;
+	width: 560px;
 	display: inline-block;
 	float: left;
 	margin-left: 40px;
+	border-radius: 100%;
 }
 
 #bio-wrapper{
-	width: 600px;
-	height: 375px;
+	width: 550px;
+	height: 550px;
 	position: absolute;
 	right: 5%;
-	padding: 10px;
+	padding: 15px;
 	text-align: center;
 	border: 1px black dotted;
+	border-radius: 100%;
+	background-color: white;
 }
+
+#text-container{
+	width: 400px;
+	height: 500px;
+	margin: auto;
+	padding: 5px;
+}
+
+#text-container p{
+	font-size: 17px;
+}
+
 
 h2{
 	display: inline-block;
@@ -61,9 +87,10 @@ h2{
 
 img{
 	display: inline-block;
-	height: 400px;
-	width: 500px;
+	height: 560px;
+	width: 560px;
 	float: left;
+	border-radius: 100%;
 }
 
 
@@ -95,10 +122,23 @@ p{
 
 
 .project-panel{
-	height: 200px;
-	width: 200px;
+	height: 300px;
+	width: 300px;
 	border: dotted black 1px;
 	margin: auto;
+	border-radius: 100%;
+	display: inline-block;
+}
+
+
+.project-panel img{
+	height: 300px;
+	width: 300px;
+	border: dotted black 1px;
+	margin: auto;
+	border-radius: 100%;
+	display: inline-block;
+	float: left;
 }
 
 
@@ -119,7 +159,11 @@ p{
 	height: 100px;
 	width: 100px;
 	margin: auto;
+	border-radius: 100%;
 }
+
+
+
 
 
 #footer-container{
