--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,13 @@ a{
 	padding-bottom: 20px;
 	border-radius: 20%;
 	margin-right: 10px;
+	background-color: #71E28E;
 }
+
+
+
+
+
 
 #about-container{
 	height: 575px;
@@ -52,7 +58,7 @@ a{
 }
 
 #pic-container{
-	border: 1px solid black;
+	border: 5px dashed #71E28E;
 	height: 560px;
 	width: 560px;
 	display: inline-block;
@@ -68,9 +74,9 @@ a{
 	right: 5%;
 	padding: 15px;
 	text-align: center;
-	border: 1px black solid;
+	border: 5px black dashed;
 	border-radius: 100%;
-	background-color: white;
+	background-color: #71E28E;
 }
 
 #text-container{
