--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,10 +76,6 @@ a{
 	background-color: #4A9E2A;
 }
 
-
-
-
-
 #about-container{
 	height: 575px;
 	/*border: solid black 1px;*/
@@ -318,7 +314,6 @@ p{
 		margin: auto;
 	}
 
-
 	#bio-wrapper{
 		width: 275px;
 		height: 275px;
@@ -336,8 +331,67 @@ p{
 
 	#text-container p{
 		font-size: 6px;
-		font-family: 'Belgrano', serif;
 	}
+
+	#projects-container{
+	width: 100%;
+	display: block;
+	/*border: 1px solid black;*/
+	margin: auto;
+}
+
+
+	.project-list li{
+		display: block;
+		left: 20px;
+	}
+
+
+	.project-panel{
+		height: 150px;
+		width: 150px;
+		border-radius: 100%;
+	}
+
+
+	.project-panel img{
+		height: 150px;
+		width: 150px;
+		margin-left: 20px;
+	}
+
+	.banner{
+		width: 200px;
+		font-size: 14px;
+		padding: 0px;
+	}
+
+	#contact{
+		font-size: 18px;
+	}
+
+	.social-media-list{
+		width: 90%;
+		margin-left: -20px;
+	}
+
+	.social-media-panel{
+		height: 75px;
+		width: 75px;
+	}
+
+	.social-media-panel img{
+		height: 75px;
+		width: 75px;	
+	}
+
+	#footer-container {
+		margin-left: -30px;
+		font-size: 24px;
+		text-align: center;
+	}
+
+
 
 }
 /*Landscape*/
@@ -346,6 +400,122 @@ p{
 	and (max-device-width: 480px)
 	and (-webkit-min-device-pixel-ratio: 2)
 	and (orientation: landscape){
+
+	#title{
+		font-size: 18px;
+		margin-left: 0%;
+		margin-top: 15px;
+	}
+
+	#nav-bar{
+		padding: 15px;
+	}
+
+	#nav-list{
+		float: right;
+		padding-top: 10px;
+		margin-top: 5px;
+		margin-right: 30px;
+	}
+
+	#nav-list li{
+		display: inline;
+		padding: 10px 20px 10px 20px;
+		margin-right: 5px;
+		font-size: 10px;
+	}
+
+	#pic-container{
+		height: 275px;
+		width: 275px;
+		margin-left: 85px;
+		
+	}
+
+	img{
+		height: 275px;
+		width: 275px;
+		margin: auto;
+	}
+
+	#bio-wrapper{
+		width: 275px;
+		height: 275px;
+		right: 0%;
+		padding: 10px;
+		top: 425px;
+		left: 85px;
+	}
+
+	#text-container{
+		width: 200px;
+		height: 250px;
+		padding: 0px;
+		margin-top: -15px;
+	}
+
+	#text-container p{
+		font-size: 7px;
+	}
+
+	#projects-container{
+	width: 100%;
+	display: block;
+	/*border: 1px solid black;*/
+	margin: auto;
+}
+
+
+	.project-list li{
+		display: inline-block;
+		left: -50px;
+	}
+
+
+	.project-panel{
+		height: 125px;
+		width: 125px;
+		border-radius: 100%;
+	}
+
+
+	.project-panel img{
+		height: 125px;
+		width: 125px;
+		margin-left: 20px;
+	}
+
+	.banner{
+		width: 150px;
+		font-size: 12px;
+		padding: 0px;
+		margin-left: 20px;
+	}
+
+	#contact{
+		font-size: 18px;
+	}
+
+	.social-media-list{
+		width: 100%;
+		margin-left: -30px;
+	}
+
+	.social-media-panel{
+		height: 75px;
+		width: 75px;
+	}
+
+	.social-media-panel img{
+		height: 75px;
+		width: 75px;	
+	}
+
+	#footer-container {
+		margin-left: -30px;
+		font-size: 18px;
+		text-align: center;
+	}
 
 }
 
@@ -467,7 +637,7 @@ p{
 }
 
 
-* ----------- Galaxy S3 ----------- */
+/* ----------- Galaxy S3 ----------- */
 
 /* Portrait and Landscape */
 @media screen 
