--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -513,7 +513,7 @@ p{
 
 	#footer-container {
 		margin-left: -30px;
-		font-size: 18px;
+		font-size: 24px;
 		text-align: center;
 	}
 
@@ -536,117 +536,6 @@ p{
 	and (max-device-width: 568px)
 	and (-webkit-min-device-pixel-ratio: 2)
 	and (orientation: portrait){
-		#title{
-		font-size: 24px;
-		margin-left: 12%;
-		margin-top: -25%;
-	}
-
-	#nav-list{
-		float: left;
-		padding-top: 10px;
-		margin-left: -40px;
-		margin-top: -10px;
-		margin-right: 0px;
-	}
-
-	#nav-list li{
-		display: inline;
-		padding: 10px 20px 10px 20px;
-		margin-right: 5px;
-		font-size: 10px;
-	}
-
-	#pic-container{
-		height: 275px;
-		width: 275px;
-		margin-left: 8px;
-		
-	}
-
-	img{
-		height: 275px;
-		width: 275px;
-		margin: auto;
-	}
-
-	#bio-wrapper{
-		width: 275px;
-		height: 275px;
-		right: 0%;
-		padding: 10px;
-		top: 450px;
-		left:8px;
-	}
-
-	#text-container{
-		width: 200px;
-		height: 250px;
-		padding: 0px;
-	}
-
-	#text-container p{
-		font-size: 6px;
-	}
-
-	#projects-container{
-	width: 100%;
-	display: block;
-	/*border: 1px solid black;*/
-	margin: auto;
-}
-
-
-	.project-list li{
-		display: block;
-		left: 20px;
-	}
-
-
-	.project-panel{
-		height: 150px;
-		width: 150px;
-		border-radius: 100%;
-	}
-
-
-	.project-panel img{
-		height: 150px;
-		width: 150px;
-		margin-left: 20px;
-	}
-
-	.banner{
-		width: 200px;
-		font-size: 14px;
-		padding: 0px;
-	}
-
-	#contact{
-		font-size: 18px;
-	}
-
-	.social-media-list{
-		width: 90%;
-		margin-left: -20px;
-	}
-
-	.social-media-panel{
-		height: 75px;
-		width: 75px;
-	}
-
-	.social-media-panel img{
-		height: 75px;
-		width: 75px;	
-	}
-
-	#footer-container {
-		margin-left: -30px;
-		font-size: 24px;
-		text-align: center;
-	}
-
 
 }
 
@@ -656,121 +545,7 @@ p{
 	and (max-device-width:568px)
 	and (-webkit-min-device-pixel-ratio:2)
 	and (orientation: landscape){
-	
-	#title{
-		font-size: 18px;
-		margin-left: 0%;
-		margin-top: 15px;
-	}
 
-	#nav-bar{
-		padding: 15px;
-	}
-
-	#nav-list{
-		float: right;
-		padding-top: 10px;
-		margin-top: 10px;
-		margin-right: 30px;
-	}
-
-	#nav-list li{
-		display: inline;
-		padding: 10px 20px 10px 20px;
-		margin-right: 5px;
-		font-size: 10px;
-	}
-
-	#pic-container{
-		height: 275px;
-		width: 275px;
-		margin-left: 135px;
-		
-	}
-
-	img{
-		height: 275px;
-		width: 275px;
-		margin: auto;
-	}
-
-	#bio-wrapper{
-		width: 275px;
-		height: 275px;
-		right: 0%;
-		padding: 10px;
-		top: 425px;
-		left: 125px;
-	}
-
-	#text-container{
-		width: 200px;
-		height: 250px;
-		padding: 0px;
-		margin-top: -15px;
-	}
-
-	#text-container p{
-		font-size: 7px;
-	}
-
-	#projects-container{
-		width: 100%;
-		display: block;
-		margin: auto;
-	}
-
-
-	.project-list li{
-		display: inline-block;
-		left: -50px;
-	}
-
-
-	.project-panel{
-		height: 125px;
-		width: 125px;
-		border-radius: 100%;
-	}
-
-
-	.project-panel img{
-		height: 125px;
-		width: 125px;
-		margin-left: 20px;
-	}
-
-	.banner{
-		width: 150px;
-		font-size: 12px;
-		padding: 0px;
-		margin-left: 35px;
-	}
-
-	#contact{
-		font-size: 18px;
-	}
-
-	.social-media-list{
-		width: 100%;
-		margin-left: -30px;
-	}
-
-	.social-media-panel{
-		height: 75px;
-		width: 75px;
-	}
-
-	.social-media-panel img{
-		height: 75px;
-		width: 75px;	
-	}
-
-	#footer-container {
-		margin-left: -30px;
-		font-size: 18px;
-		text-align: center;
-	}
 }
 
 
@@ -815,7 +590,7 @@ p{
 	#pic-container{
 		height: 275px;
 		width: 275px;
-		margin-left: 35px;
+		margin-left: 30px;
 		
 	}
 
@@ -831,7 +606,7 @@ p{
 		right: 0%;
 		padding: 10px;
 		top: 450px;
-		left:35px;
+		left:30px;
 	}
 
 	#text-container{
@@ -911,21 +686,37 @@ p{
 	and (max-device-width: 667px)
 	and (-webkit-min-device-pixel-ratio: 2)
 	and (orientation: landscape){
-		#title{
-		font-size: 18px;
-		margin-left: 0%;
-		margin-top: 15px;
-	}
 
-	#nav-bar{
-		padding: 15px;
+}
+
+/* ----------- Galaxy S3 ----------- */
+
+/* Portrait and Landscape */
+@media screen 
+  and (device-width: 360px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 2) {
+
+}
+
+/* Portrait */
+@media screen 
+  and (device-width: 360px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 2) 
+  and (orientation: portrait) {
+  	#title{
+		font-size: 24px;
+		margin-left: 15%;
+		margin-top: -25%;
 	}
 
 	#nav-list{
-		float: right;
+		/*float: left;*/
 		padding-top: 10px;
-		margin-top: 10px;
-		margin-right: 30px;
+		margin-left: -20px;
+		margin-top: -10px;
+		margin-right: 0px;
 	}
 
 	#nav-list li{
@@ -938,7 +729,7 @@ p{
 	#pic-container{
 		height: 275px;
 		width: 275px;
-		margin-left: 175px;
+		margin-left: 30px;
 		
 	}
 
@@ -953,52 +744,51 @@ p{
 		height: 275px;
 		right: 0%;
 		padding: 10px;
-		top: 425px;
-		left: 175px;
+		top: 450px;
+		left:30px;
 	}
 
 	#text-container{
 		width: 200px;
 		height: 250px;
 		padding: 0px;
-		margin-top: -15px;
 	}
 
 	#text-container p{
-		font-size: 7px;
+		font-size: 6px;
 	}
 
 	#projects-container{
-		width: 100%;
-		display: block;
-		margin: auto;
-	}
+	width: 100%;
+	display: block;
+	/*border: 1px solid black;*/
+	margin: auto;
+}
 
 
 	.project-list li{
-		display: inline-block;
-		left: -50px;
+		display: block;
+		left: 40px;
 	}
 
 
 	.project-panel{
-		height: 125px;
-		width: 125px;
+		height: 150px;
+		width: 150px;
 		border-radius: 100%;
 	}
 
 
 	.project-panel img{
-		height: 125px;
-		width: 125px;
+		height: 150px;
+		width: 150px;
 		margin-left: 20px;
 	}
 
 	.banner{
-		width: 150px;
-		font-size: 12px;
+		width: 200px;
+		font-size: 14px;
 		padding: 0px;
-		margin-left: 60px;
 	}
 
 	#contact{
@@ -1006,8 +796,8 @@ p{
 	}
 
 	.social-media-list{
-		width: 100%;
-		margin-left: -30px;
+		width: 90%;
+		margin-left: -20px;
 	}
 
 	.social-media-panel{
@@ -1022,13 +812,21 @@ p{
 
 	#footer-container {
 		margin-left: -30px;
-		font-size: 18px;
+		font-size: 24px;
 		text-align: center;
 	}
-}
-
 
 }
+
+/* Landscape */
+@media screen 
+  and (device-width: 320px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 2) 
+  and (orientation: landscape) {
+
+}
+
 
 
 
@@ -1089,7 +887,282 @@ p{
 }
 
 
+/* ----------- Galaxy S3 ----------- */
 
+/* Portrait and Landscape */
+@media screen 
+  and (device-width: 360px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 2) {
+
+}
+
+/* Portrait */
+@media screen 
+  and (device-width: 360px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 2) 
+  and (orientation: portrait) {
+  	#title{
+		font-size: 24px;
+		margin-left: 15%;
+		margin-top: -25%;
+	}
+
+	#nav-list{
+		float: left;
+		padding-top: 10px;
+		margin-left: -0px;
+		margin-top: -10px;
+		margin-right: 0px;
+	}
+
+	#nav-list li{
+		display: inline;
+		padding: 10px 20px 10px 20px;
+		margin-right: 5px;
+		font-size: 10px;
+	}
+
+	#pic-container{
+		height: 275px;
+		width: 275px;
+		margin-left: 30px;
+		
+	}
+
+	img{
+		height: 275px;
+		width: 275px;
+		margin: auto;
+	}
+
+	#bio-wrapper{
+		width: 275px;
+		height: 275px;
+		right: 0%;
+		padding: 10px;
+		top: 450px;
+		left:30px;
+	}
+
+	#text-container{
+		width: 200px;
+		height: 250px;
+		padding: 0px;
+	}
+
+	#text-container p{
+		font-size: 6px;
+	}
+
+	#projects-container{
+	width: 100%;
+	display: block;
+	/*border: 1px solid black;*/
+	margin: auto;
+}
+
+
+	.project-list li{
+		display: block;
+		left: 50px;
+	}
+
+
+	.project-panel{
+		height: 150px;
+		width: 150px;
+		border-radius: 100%;
+	}
+
+
+	.project-panel img{
+		height: 150px;
+		width: 150px;
+		margin-left: 20px;
+	}
+
+	.banner{
+		width: 200px;
+		font-size: 14px;
+		padding: 0px;
+	}
+
+	#contact{
+		font-size: 18px;
+	}
+
+	.social-media-list{
+		width: 90%;
+		margin-left: -20px;
+	}
+
+	.social-media-panel{
+		height: 75px;
+		width: 75px;
+	}
+
+	.social-media-panel img{
+		height: 75px;
+		width: 75px;	
+	}
+
+	#footer-container {
+		margin-left: -30px;
+		font-size: 24px;
+		text-align: center;
+	}
+
+}
+
+/* Landscape */
+@media screen 
+  and (device-width: 320px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 2) 
+  and (orientation: landscape) {
+
+}
+
+/* ----------- Galaxy S4, S5 and Note 3 ----------- */
+
+/* Portrait and Landscape */
+@media screen 
+  and (device-width: 320px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 3) {
+
+
+}
+
+/* Portrait */
+@media screen 
+  and (device-width: 360px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 3) 
+  and (orientation: portrait) {
+  	#title{
+		font-size: 24px;
+		margin-left: 15%;
+		margin-top: -25%;
+	}
+
+	#nav-list{
+		float: left;
+		padding-top: 10px;
+		margin-left: -20px;
+		margin-top: -10px;
+		margin-right: 0px;
+	}
+
+	#nav-list li{
+		display: inline;
+		padding: 10px 20px 10px 20px;
+		margin-right: 5px;
+		font-size: 10px;
+	}
+
+	#pic-container{
+		height: 275px;
+		width: 275px;
+		margin-left: 30px;
+		
+	}
+
+	img{
+		height: 275px;
+		width: 275px;
+		margin: auto;
+	}
+
+	#bio-wrapper{
+		width: 275px;
+		height: 275px;
+		right: 0%;
+		padding: 10px;
+		top: 450px;
+		left:30px;
+	}
+
+	#text-container{
+		width: 200px;
+		height: 250px;
+		padding: 0px;
+	}
+
+	#text-container p{
+		font-size: 6px;
+	}
+
+	#projects-container{
+	width: 100%;
+	display: block;
+	/*border: 1px solid black;*/
+	margin: auto;
+}
+
+
+	.project-list li{
+		display: block;
+		left: 40px;
+	}
+
+
+	.project-panel{
+		height: 150px;
+		width: 150px;
+		border-radius: 100%;
+	}
+
+
+	.project-panel img{
+		height: 150px;
+		width: 150px;
+		margin-left: 20px;
+	}
+
+	.banner{
+		width: 200px;
+		font-size: 14px;
+		padding: 0px;
+	}
+
+	#contact{
+		font-size: 18px;
+	}
+
+	.social-media-list{
+		width: 90%;
+		margin-left: -20px;
+	}
+
+	.social-media-panel{
+		height: 75px;
+		width: 75px;
+	}
+
+	.social-media-panel img{
+		height: 75px;
+		width: 75px;	
+	}
+
+	#footer-container {
+		margin-left: -30px;
+		font-size: 24px;
+		text-align: center;
+	}
+
+}
+
+/* Landscape */
+@media screen 
+  and (device-width: 320px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 3) 
+  and (orientation: landscape) {
+
+}
 
 /* ----------- Galaxy S6 ----------- */
 
@@ -1107,7 +1180,6 @@ p{
   and (device-height: 640px) 
   and (-webkit-device-pixel-ratio: 4) 
   and (orientation: portrait) {
-
 
 }
 
